Development
    Updated French translation from Starcrasher
    Updated English (Great Britian) translation
    Updated Italian translation
    Updated Dutch translation
    Updated French translation
    Updated Spanish translation
    Updated Turkish translation
    Updated Portuguese translation
    Updated Hungarian translation
    Updated Serbian translation
    Updated Czech translation
    Updated German translation
    Add Frisian translation from Launchpad
    Updated Japanese translation
    Updated Korean translation
1.0.1b1
    Updated Polish translation
    Fix cross compile to Windows
    libgmlib - gm_audio monitor alsa device volume changes outside of gnome-mplayer
    Fix default volume on SOFTVOL audio devices
    libgmlib - gm_audio Reduce load when type is not pulse
    Process PulseAudio volume changes from PulseAudio server, to keep gui in sync
    Run make indent on all source files
    Remove idledata->mplayer_volume tracking as not needed anymore (to be replaced with other code)
    Rework volume code to control audio device in alsa or pulse mode
    Rework volume code to push volume to mplayer in softvol mode
    Move all volume handling to gmlib/gm_audio
    Enable softvol option when preferred or when audio_device recommends it
    Change "mixer" preference to "alsa-mixer"
    Remove global variable use_pulse_flat_volume
    Remove configure check for PulseAudio flat volume
    libgmlib - gm_audio, add devices similar to gmtk_output_combo_box
    libgmtk - gmtk_output_combo_box, change OUTPUT_TYPE_BASIC to OUTPUT_TYPE_SOFTVOL
    Remove global variable mixer, now handled by audio_device structure
    Remove global variable ao, now handled by audio_device structure
    libgmlib - gm_audio list population and update
    libgmlib - gm_audio skeleton
    Fix typo in gnome-mplayer.schemas.in
    libgmtk - gmtk_output_combo_box, fix memory leak
    Hide fullscreen controls, when active workspace switches Issue #488