@@ -1,4 +1,5 @@
 Development
+    Fix Software Volume, remembered value not being loaded
     Updated French translation from Starcrasher
     Updated English (Great Britian) translation
     Updated Italian translation
